<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foodie</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="title_activity_diet">DietActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scoring_initialtext">点击圆环跑分！</string>
    <string name="food_picker_title">食    物</string>
    <string name="food_picker_name">食物名称</string>
    <string name="food_picker_weight">食物重量</string>
    <string name="food_picker_save">SAVE</string>
    <string name="food_picker_continue">ADD MORE</string>

</resources>