<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey"
    android:orientation="vertical" 
    tools:context="com.edu.thss.smartdental.eat.FoodPicker" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.edu.thss.smartdental.eat" >

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_marginBottom="1dp"
	        android:background="#5cc8e5" >
	
	        <Button
	            android:id="@+id/button_food_back"
	            android:layout_width="40dp"
	            android:layout_height="40dp"
	            android:layout_alignBaseline="@+id/textView_food_date"
	            android:layout_alignBottom="@+id/textView_food_date"
	            android:layout_alignParentLeft="true"
	            android:background="@drawable/back" />
	
	        <TextView
	            android:id="@+id/textView_food_date"
	            android:layout_width="wrap_content"
	            android:layout_height="42dp"
	            android:layout_alignParentBottom="true"
	            android:layout_centerHorizontal="true"
	            android:layout_weight="0.18"
	            android:text="@string/food_picker_title"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/white"
	            android:textSize="25sp" />
	    </RelativeLayout>
	</LinearLayout>
  
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/corner_top"
	        android:paddingBottom="10dp"
	        android:paddingLeft="10dp"
	        android:paddingTop="10dp"
	        android:text="@string/food_picker_name"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/white" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:background="@color/white" >
	
	        <com.edu.thss.smartdental.eat.WheelView
	            android:id="@+id/wheelView_type"
	            android:layout_width="100dp"
	            android:layout_height="160dp"
	            android:layout_weight="1" />
	
	        <com.edu.thss.smartdental.eat.WheelView
	            android:id="@+id/wheelView_name"
	            android:layout_width="100dp"
	            android:layout_height="160dp"
	            android:layout_weight="1" />
	    </LinearLayout>
    
	    <TextView
             android:id="@+id/textView_wheel"
             android:layout_width="match_parent"
             android:layout_height="10dp"
             android:background="@drawable/corner_bottom"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/white" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="20dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="20dp"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/textView_weight"
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:background="@drawable/corner_top"
	        android:padding="10dp"
	        android:paddingBottom="10dp"
	        android:paddingLeft="10dp"
	        android:paddingTop="20dp"
	        android:text="@string/food_picker_weight"
	        android:textColor="@color/white"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <SeekBar
	        android:id="@+id/seekBar_food_weight"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:paddingTop="15dp"
	        android:background="@color/white"
	        android:max="1000"
	  android:progress="0"
	  android:progressDrawable="@drawable/background_bar"
	  android:thumb="@drawable/thumb_bar" />
	    
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.00" >
	
	    <Button
	        android:id="@+id/button_food_save"
	        android:layout_width="120dp"
	        android:layout_height="48dp"
	        android:layout_weight="0.33"
	        android:background="@drawable/button_run"
	        android:paddingLeft="10dp"
	        android:text="@string/food_picker_save"
	        android:textColor="@color/white"/>
	
	    <Button
	        android:id="@+id/button_food_continue"
	        android:layout_width="147dp"
	        android:layout_height="51dp"
	        android:layout_weight="0.12"
	        android:background="@drawable/button_run"
	        android:text="@string/food_picker_continue" 
	        android:textColor="@color/white"/>
	
	</LinearLayout>
</LinearLayout>